--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 	],
 	"require":{
 		"composer/installers": "~1.0",
-		"abuyoyo/screen-meta-links": "~0.5"
+		"abuyoyo/screen-meta-links": "~0.5",
+		"abuyoyo/plugincore": "~0.14"
 	}
 }
