--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,14 @@
 	"name": "abuyoyo/notice-manager",
 	"description": "Manage notices on WordPress admin pages. Adds 'Notices' screen-meta-link.",
 	"type": "wordpress-plugin",
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "https://github.com/abuyoyo/screen-meta-links.git"
+		}
+	],
 	"require":{
-		"abuyoyo/screen-meta-links": "~0.5",
+		"abuyoyo/screen-meta-links": "~0.11",
 		"abuyoyo/plugincore": "~0.14"
 	}
 }
