--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 	],
 	"require":{
 		"abuyoyo/screen-meta-links": "~0.11",
-		"abuyoyo/plugincore": "~0.21"
+		"abuyoyo/plugincore": "~0.22",
+		"abuyoyo/adminmenupage": "~0.21"
 	}
 }
