composer.json - prepend-autoloader: false
Local vendor/autoload should not prepend if required locally.
Give precedence to main composer installation if available.

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
 		"abuyoyo/screen-meta-links": "~0.13",
 		"abuyoyo/plugincore": "~0.27",
 		"abuyoyo/adminmenupage": "~0.29"
+	},
+	"config": {
+		"prepend-autoloader": false
 	}
 }
